--- a/.github/workflows/deploy-solution.yml
+++ b/.github/workflows/deploy-solution.yml
@@ -19,7 +19,7 @@ jobs:
           name: packed-solution
       - uses: microsoft/powerplatform-actions/import-solution@v0
         with:
-          environment-url: org09903175.crm.dynamics.com
+          environment-url: https://org09903175.crm.dynamics.com
           user-name: ${{ secrets.USERNAME }}
           password-secrets: ${{ secrets.PASSWORD }}
           solution-file: contoso_university_core_managed.zip
