--- a/.github/workflows/deploy-solution.yml
+++ b/.github/workflows/deploy-solution.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   deploy:
     runs-on: windows-latest
+    if: ${{ github.event.workflow_run.conclussion== 'success' }}
     environment: production
     steps:
       - uses: dawidd6/action-download-artifact@v2
