--- a/.github/workflows/deploy-solution.yml
+++ b/.github/workflows/deploy-solution.yml
@@ -21,5 +21,5 @@ jobs:
         with:
           environment-url: https://org09903175.crm.dynamics.com
           user-name: ${{ secrets.USERNAME }}
-          password-secrets: ${{ secrets.PASSWORD }}
+          password-secret: ${{ secrets.PASSWORD }}
           solution-file: contoso_university_core_managed.zip
